fix(api): fix api gateway configuration input overlap

--- a/src/app/api/admin/creation/_apiCreation.scss
+++ b/src/app/api/admin/creation/_apiCreation.scss
@@ -1,4 +1,9 @@
-
+input[type="number"] + div.md-errors-spacer + .hint {
+  bottom: -5px;
+}
+md-select + .hint {
+  bottom: -17px;
+}
 .hint {
   /* Position the hint */
   position: absolute;
